--- a/public/donate.html
+++ b/public/donate.html
@@ -19,7 +19,10 @@
                 <div class="logo-icon">
                     <i class="fas fa-leaf"></i>
                 </div>
-                <span>Green Pulse Education</span>
+                <div class="logo-text">
+                    <span>Green Pulse</span>
+                    <span>Education</span>
+                </div>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -132,7 +135,7 @@
                                     <label for="donor-email">Email Address</label>
                                     <input type="email" id="donor-email" name="donor-email" placeholder="your.email@example.com" required>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group" style="display: none;">
                                     <label for="message">Message (Optional)</label>
                                     <textarea id="message" name="message" rows="3" placeholder="Share why you support environmental education..."></textarea>
                                 </div>
