--- a/public/programs.html
+++ b/public/programs.html
@@ -16,7 +16,10 @@
                 <div class="logo-icon">
                     <i class="fas fa-leaf"></i>
                 </div>
-                <span>Green Pulse Education</span>
+                <div class="logo-text">
+                    <span>Green Pulse</span>
+                    <span>Education</span>
+                </div>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
